--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,57 @@ nav ul li a {
     cursor: pointer;
 }
 
+.last-section{
+    display: flex;
+    gap: 96px;
+    margin-top: 100px;
+}
+.last-section-description h3{
+    color: #0A0826;
+    font-weight: bold;
+    font-size: 2.375rem;
+    margin-bottom: 16px;
+}
+.last-section-description p{
+    color: #6C6C6C;
+    font-weight: bold;
+}
+
+.last-section-description button{
+    color: white;
+    background-color: #E02C6D;
+    border: none;
+    /* padding: 24px 10px; */
+    height: 44px;
+    width: 155px;
+    font-weight: bold;
+}
+
+.foot{
+    background-color: #0A0826;    
+    text-align: center;
+    max-width: 1200px;
+}
+.foot h4{
+    color: white;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 3px;
+    margin-top: 50px;
+    padding-top: 50px;
+}
+.p-foot1{
+    color: #D9DBE1;
+    font-weight: bold;
+    font-size: 0.875rem;
+    margin-bottom: 3px;
+}
+.p-foot2{
+    padding-bottom: 50px;
+
+}
+
+
 /* Smaller device responsive */
 @media screen and (max-width: 576px){
 
